--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,5 @@
     <dimen name="padding_btn_horizontal">20dp</dimen>
     <dimen name="padding_btn_vertical">10dp</dimen>
     <dimen name="padding_end_btn_icon">24dp</dimen>
-
+    <dimen name="corner_radius">8dp</dimen>
 </resources>
