--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     android:background="@color/background_color"
     android:orientation="vertical">
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/mainContainer"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/llButtons"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/llButtons"
         android:layout_width="match_parent"
@@ -14,6 +24,7 @@
         android:layout_marginVertical="@dimen/margin_layout_vertical"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/constrainLayout">
+
         <Button
             android:id="@+id/btnCategory"
             style="@style/StyleNavButton"
@@ -23,8 +34,8 @@
             android:layout_weight="1"
             android:background="@drawable/shape_rounded_8"
             android:backgroundTint="@color/blue_color"
-            android:text="@string/title_category">
-        </Button>
+            android:text="@string/title_category" />
+
         <Button
             android:id="@+id/btnFavorites"
             style="@style/StyleNavButton"
@@ -35,7 +46,6 @@
             android:background="@drawable/shape_rounded_8"
             android:backgroundTint="@color/red_color"
             android:drawableEnd="@drawable/ic_heart"
-            android:text="@string/title_favorites">
-        </Button>
+            android:text="@string/title_favorites" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
