--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.AndroidSprint" parent="android:Theme.Material.Light.NoActionBar">
+    <style name="Theme.AndroidSprint" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/background_color</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:navigationBarColor">@color/background_color</item>
